--- a/index.html
+++ b/index.html
@@ -1,31 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Launch countdown timer</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-
-  We're launching soon
-
-  Days
-  Hours
-  Minutes
-  Seconds
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="./images/favicon-32x32.png"
+		/>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Red+Hat+Text:wght@700&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="stylesheet" href="./styles/style.css" />
+		<title>Frontend Mentor | Launch countdown timer</title>
+	</head>
+	<body>
+		<div class="container">
+			<h1>We're launching soon</h1>
+			<div class="timer-container">
+				<div class="timer-group">
+					<div class="timer">
+						<span class="black-dot"></span>
+						<h1 class="timer-display">08</h1>
+					</div>
+					<span class="timer-text">Days</span>
+				</div>
+				<div class="timer-group">
+					<div class="timer">
+						<span class="black-dot"></span>
+						<h1 class="timer-display">23</h1>
+					</div>
+					<span class="timer-text">Hours</span>
+				</div>
+				<div class="timer-group">
+					<div class="timer">
+						<span class="black-dot"></span>
+						<h1 class="timer-display">55</h1>
+					</div>
+					<span class="timer-text">Minutes</span>
+				</div>
+				<div class="timer-group">
+					<div class="timer">
+						<span class="black-dot"></span>
+						<h1 class="timer-display">41</h1>
+					</div>
+					<span class="timer-text">Seconds</span>
+				</div>
+			</div>
+			<div class="sci">
+				<img src="./images/icon-facebook.svg" alt="facebook" />
+				<img src="./images/icon-pinterest.svg" alt="pinterest" />
+				<img src="./images/icon-instagram.svg" alt="instagram" />
+			</div>
+			<img src="./images/pattern-hills.svg" alt="hills" />
+		</div>
+		<div class="attribution">
+			Challenge by
+			<a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+				>Frontend Mentor</a
+			>. Coded by
+			<a href="https://frontendmentor.io/profile/PXVC" target="_blank">PXVC</a>.
+		</div>
+	</body>
 </html>
