--- a/index.html
+++ b/index.html
@@ -25,28 +25,28 @@
 				<div class="timer-group">
 					<div class="timer">
 						<span class="black-dot"></span>
-						<h1 class="timer-display">08</h1>
+						<h1 class="timer-display" id="day-timer"></h1>
 					</div>
 					<span class="timer-text">Days</span>
 				</div>
 				<div class="timer-group">
 					<div class="timer">
 						<span class="black-dot"></span>
-						<h1 class="timer-display">23</h1>
+						<h1 class="timer-display" id="hour-timer"></h1>
 					</div>
 					<span class="timer-text">Hours</span>
 				</div>
 				<div class="timer-group">
 					<div class="timer">
 						<span class="black-dot"></span>
-						<h1 class="timer-display">55</h1>
+						<h1 class="timer-display" id="minute-timer"></h1>
 					</div>
 					<span class="timer-text">Minutes</span>
 				</div>
 				<div class="timer-group">
 					<div class="timer">
 						<span class="black-dot"></span>
-						<h1 class="timer-display">41</h1>
+						<h1 class="timer-display" id="second-timer"></h1>
 					</div>
 					<span class="timer-text">Seconds</span>
 				</div>
@@ -65,5 +65,6 @@
 			>. Coded by
 			<a href="https://frontendmentor.io/profile/PXVC" target="_blank">PXVC</a>.
 		</div>
+		<script src="./js/app.js"></script>
 	</body>
 </html>
