add "00" to date time display

--- a/index.html
+++ b/index.html
@@ -25,28 +25,28 @@
 				<div class="timer-group">
 					<div class="timer">
 						<span class="black-dot"></span>
-						<h1 class="timer-display" id="day-timer"></h1>
+						<h1 class="timer-display" id="day-timer">00</h1>
 					</div>
 					<span class="timer-text">Days</span>
 				</div>
 				<div class="timer-group">
 					<div class="timer">
 						<span class="black-dot"></span>
-						<h1 class="timer-display" id="hour-timer"></h1>
+						<h1 class="timer-display" id="hour-timer">00</h1>
 					</div>
 					<span class="timer-text">Hours</span>
 				</div>
 				<div class="timer-group">
 					<div class="timer">
 						<span class="black-dot"></span>
-						<h1 class="timer-display" id="minute-timer"></h1>
+						<h1 class="timer-display" id="minute-timer">00</h1>
 					</div>
 					<span class="timer-text">Minutes</span>
 				</div>
 				<div class="timer-group">
 					<div class="timer">
 						<span class="black-dot"></span>
-						<h1 class="timer-display" id="second-timer"></h1>
+						<h1 class="timer-display" id="second-timer">00</h1>
 					</div>
 					<span class="timer-text">Seconds</span>
 				</div>
